# pychemprojections

./: .gitignore  .pre-commit-config.yaml  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  MODULE.bazel  README.md  WORKSPACE  pyproject.toml  requirements.in  requirements_lock.txt
.github/workflows/: github-repo-stats.yml  main.yml  pre-commit.yml
examples/: fischer_projection.ipynb  fischer_projection.py  newman_projection.ipynb  wedgedash_projection.ipynb
pychemprojections/fischer/: __main__.py  drawingclasses.py  multiplechiral.py  singlechiral.py  stringmanipulation.py  visualization.py
pychemprojections/fischer/tests/: BUILD.bazel  test_multiplechiral.py  test_singlechiral.py  test_stringmanipulation.py
pychemprojections/newman/: __main__.py  drawingclasses.py  drawingelements.py  stringmanipulation.py  visualization.py
pychemprojections/newman/tests/: BUILD.bazel  test_drawingelements.py  test_stringmanipulation.py
pychemprojections/utils/: logger_utils.py  rdkit_utils.py  smiles_manipulation_utils.py
pychemprojections/utils/tests/: BUILD.bazel  test_rdkit_utils.py  test_smiles_manipulation_utils.py
pychemprojections/wedgedash/: __main__.py  bondoperations.py  visualization.py
pychemprojections/wedgedash/tests/: BUILD.bazel  test_bondoperations.py
tests/: BUILD.bazel  pytest_runner.py  test_fischer_visualization.py  test_newman_visualization.py  test_wedgedash_visualization.py
vandan-revanur/pychemprojections/: README.md
vandan-revanur/pychemprojections/ghrs-data/: forks.csv  stargazers.csv  views_clones_aggregate.csv
vandan-revanur/pychemprojections/ghrs-data/snapshots/: 2023-05-28_105201_top_paths_snapshot.csv  2023-05-28_105201_top_referrers_snapshot.csv  2023-05-28_105201_views_clones_series_fragment.csv  2023-05-28_231335_views_clones_series_fragment.csv  2023-05-29_231331_top_paths_snapshot.csv  2023-05-29_231331_top_referrers_snapshot.csv  2023-05-29_231331_views_clones_series_fragment.csv  2023-05-30_231353_top_paths_snapshot.csv  2023-05-30_231353_top_referrers_snapshot.csv  2023-05-30_231353_views_clones_series_fragment.csv  2023-05-31_231341_top_paths_snapshot.csv  2023-05-31_231341_top_referrers_snapshot.csv  2023-05-31_231341_views_clones_series_fragment.csv  2023-06-01_231421_top_paths_snapshot.csv  2023-06-01_231421_views_clones_series_fragment.csv  2023-06-02_231454_top_referrers_snapshot.csv  2023-06-02_231454_views_clones_series_fragment.csv  2023-06-03_231310_top_paths_snapshot.csv  2023-06-03_231310_views_clones_series_fragment.csv  2023-06-04_231340_top_referrers_snapshot.csv  2023-06-04_231340_views_clones_series_fragment.csv  2023-06-05_231404_top_paths_snapshot.csv  2023-06-05_231404_top_referrers_snapshot.csv  2023-06-05_231404_views_clones_series_fragment.csv  2023-06-06_231343_top_paths_snapshot.csv  2023-06-06_231343_top_referrers_snapshot.csv  2023-06-06_231343_views_clones_series_fragment.csv  2023-06-07_231427_top_paths_snapshot.csv  2023-06-07_231427_top_referrers_snapshot.csv  2023-06-07_231427_views_clones_series_fragment.csv  2023-06-08_231421_top_paths_snapshot.csv  2023-06-08_231421_top_referrers_snapshot.csv  2023-06-08_231421_views_clones_series_fragment.csv  2023-06-09_231438_top_paths_snapshot.csv  2023-06-09_231438_top_referrers_snapshot.csv  2023-06-09_231438_views_clones_series_fragment.csv  2023-06-10_231323_top_paths_snapshot.csv  2023-06-10_231323_top_referrers_snapshot.csv  2023-06-10_231323_views_clones_series_fragment.csv  2023-06-11_231416_top_paths_snapshot.csv  (+1807 more)
vandan-revanur/pychemprojections/latest-report/: report.html  report.md  report_for_pdf.html
