# pychemprojections/utils/tests/BUILD.bazel
# Unit tests for the utils package.
# Adding a new test_*.py file here requires NO changes to this BUILD file —
# glob() picks it up automatically and pytest discovers it via directory arg.

load("@rules_python//python:defs.bzl", "py_test")

exports_files(glob(["test_*.py"]) + ["__init__.py"])

_RUNNER = ["//tests:pytest_runner.py"]
_PYTEST  = ["@pypi//pytest", "@pypi//pytest_mock"]

py_test(
    name = "utils_tests",
    srcs = _RUNNER + glob(["__init__.py", "test_*.py"]),
    main = "pytest_runner.py",
    # Pass the directory — pytest discovers every test_*.py inside it.
    args = ["pychemprojections/utils/tests/", "--tb=short", "-q"],
    deps = _PYTEST + [
        "//:utils_smiles_manipulation",
        "//:utils_rdkit",
        "@pypi//rdkit",
    ],
)
